@@ -1,5 +1,5 @@
 APACHE 2.0 STATUS:                                              -*-text-*-
-Last modified at [$Date: 2002/03/22 19:35:47 $]
+Last modified at [$Date: 2002/03/23 23:19:41 $]
 
 Release:
 
@@ -188,6 +188,8 @@ RELEASE NON-SHOWSTOPPERS BUT WOULD BE REAL NICE TO WRAP THESE UP:
       to read from.
       Proposed solution in:
         Message-ID: <3C36ADAF.60601@cnet.com>
+      Update 3/23/2002: solution implemented for mod_cgi, mod_cgid remains
+        to be fixed
 
     * Try to get libtool inter-library dependency code working on AIX.
         Message-ID: <cm3n10lx555.fsf@rdu163-40-092.nc.rr.com>
